--- a/pong/pong.kv
+++ b/pong/pong.kv
@@ -40,7 +40,7 @@
 
     PongBall:
         id: pong_ball
-    	center: self.parent.center
+    	center: root.center
 
     PongPaddle:
         id: player_left
