--- a/snake/snake.kv
+++ b/snake/snake.kv
@@ -35,8 +35,11 @@
         height: root.height/root.row_number
 
 <OptionsPopup>
+    border_option_widget: border_option_instance
+    speed_option_widget: speed_option_instance
+
     title: "Options"
-    size_hint: .5, .5
+    size_hint: .75, .75
     BoxLayout:
         orientation: "vertical"
         spacing: 20
@@ -45,21 +48,24 @@
             cols: 2
             Label:
                 text: "Borders"  
+                halign: "center"
             Switch:
-                active: False
+                id: border_option_instance
             Label: 
                 text: "Game speed"
+                halign: "center"
             Slider:
-                id: speed_slider
+                id: speed_option_instance
                 max: 10
                 min: 1
+                step: 1
                 value: 1
         AnchorLayout:
             anchor_x: "center"
             size_hint: 1, .25
             Button:
                 size_hint_x: 0.5
-                text: "Dismiss"
+                text: "Save changes"
                 on_press: root.dismiss()
 
 <MainMenuScreen>:
@@ -70,20 +76,22 @@
             orientation: "vertical"
             size_hint: (0.5, 1)
             spacing: 10
-            padding: 50
 
             Label:
+                size_hint_y: .4
                 text: "Ouroboros"
+                valign: "bottom"
                 bold: True
                 font_size: 50
+                padding: 0, 0
 
             AnchorLayout:
                 anchor_x: "center"
+                size_hint_y: .6
                 BoxLayout:
+                    size_hint: .5, .5
                     orientation: "vertical"
-                    size_hint: (0.75, 1)
                     spacing: 10
-                    padding: 20
                     Button:
                         halign: "center"
                         valign: "middle"
@@ -91,6 +99,7 @@
                         on_press: root.manager.current = 'game_screen'
 
                     Button:
+                        size_hint:
                         halign: "center"
                         valign: "middle"
                         text: "Options"
